--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,7 +37,7 @@ nav:
       - '3: JavaScript (Advanced)': './03-JavaScript-2/README.md'
       - '4: APIs': './04-API/README.md'
       - '5: CLI & Git': './05-CLI-Git/README.md'
-      #- '6: GitHub': './06-GitHub/README.md'
+      - '6: GitHub': './06-GitHub/README.md'
 plugins:
   - search
 markdown_extensions:
